--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
-/*div {
+div {
   border: solid black 5px;
   margin: 5px;
   padding: 5px;
-}*/
+}
 
 .flex {
   display: flex;
@@ -23,4 +23,19 @@
 
 #activate {
   display: none;
+}
+
+#chat-container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+}
+
+#chat-log {
+  padding: 14px;
+}
+
+#chat-input {
+  width: 100%;
+  
 }
